# enctoy

./: .gitignore  Makefile  README.md  enctoy.py  pyproject.toml
enctoy/: __init__.py  commun.py  decoder.py  encoder.py  enctoy.py
