[project]
name = "enctoy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "constriction>=0.4.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "sewar>=0.4.6",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
]
